--- a/StudentInformationMVC/Views/Shared/_Layout.cshtml
+++ b/StudentInformationMVC/Views/Shared/_Layout.cshtml
@@ -15,14 +15,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Student", "Index", "Student", new { area = "" }, new { @class = "navbar-brand" })
+                </button>               
+                
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Student", "Index", "Student", new { area = "" }, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Assignment", "Index", "Assignment", new { area = "" }, new { @class = "navbar-brand" })</li>
                 </ul>
             </div>
         </div>
